--- a/school/src/index.css
+++ b/school/src/index.css
@@ -53,6 +53,13 @@ a {
 
 .main-container {
   overflow-x: hidden;
+  padding-top: 76px;
+}
+
+@media (max-width: 820px) {
+  .main-container {
+    padding-top: 68px;
+  }
 }
 
 .autoShow {
